# LQNN-Liquid-Quantum-Neural-Network

./: .dockerignore  .gitignore  Dockerfile  README.md  begining.md  docker-compose.yml  main.py  main_loop.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  consolidation.py  network.py  neuron.py  quantum_state.py  synapse.py
demo/: __init__.py  fase1_demo.py  fase2_demo.py  fase4_one_shot_demo.py  pattern_demo.py  text_demo.py  visualizer.py
desktop/: build.sh  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: API.md  ARCHITECTURE.md  QUANTUM_METHOD.md  QUANTUM_REVOLUTION.md  SETUP.md
experiments/: __init__.py  auto_runner.py  download_open_model.py  energy_profile.py  topology_log.py  vs_mlp.py
learning/: __init__.py  hebbian.py  one_shot.py  plasticity.py
lqnn/: __init__.py
lqnn/agents/: browser_agent.py  manager.py  smart_search.py
lqnn/core/: __init__.py  associative_memory.py  consolidation.py  entanglement_index.py  network.py  neuron.py  phase_space.py  quantum_batch_engine.py  quantum_state.py  synapse.py  temporal_pipeline.py  vector_store.py
lqnn/demo/: __init__.py  fase1_demo.py  fase2_demo.py  fase4_one_shot_demo.py  pattern_demo.py  text_demo.py  visualizer.py
lqnn/experiments/: __init__.py  auto_runner.py  energy_profile.py  topology_log.py  vs_mlp.py
lqnn/ingestion/: __init__.py  chunker.py  extractors.py  processor.py  rabbit_queue.py
lqnn/learning/: __init__.py  hebbian.py  (+2 more)
tests/: conftest.py  test_agents.py  test_associative_memory.py  test_chat_engine.py  test_models.py  test_training_db.py  test_ui.py  test_vector_store.py
ui/: __init__.py  app.py  controls.py  renderer.py  websocket_server.py
(+25 files in other folders)
