[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqnn"
version = "0.1.0"
description = "Liquid Quantum Neural Network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lqnn*"]
