[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqnn"
version = "3.0.0"
description = "LQNN - Liquid Quantum Neural Network: Quantum Associative Brain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "open_clip_torch>=2.24.0",
    "transformers>=4.44.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "chromadb>=0.4.22",
    "pymongo>=4.6.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "psutil>=5.9.0",
    "pdfplumber>=0.11.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "aio-pika>=9.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lqnn*"]
