[package]
name = "lqnn-desktop"
version = "3.0.0"
description = "LQNN v3 - Quantum Brain Desktop Application"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
